{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 14,
  "lineage": "cc7e38b3-a746-2c3e-45b3-a517d21b9b8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:security-group/sg-052e10a340d111f6e",
            "description": "Security group with no ingress rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052e10a340d111f6e",
            "ingress": [],
            "name": "no-ingress-sg",
            "name_prefix": "",
            "owner_id": "970433280917",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "development"
            },
            "tags_all": {
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:network-acl/acl-0909418153958ca45",
            "default_network_acl_id": "acl-0909418153958ca45",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0909418153958ca45",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "970433280917",
            "subnet_ids": [
              "subnet-08ddb69fd0024f3e1",
              "subnet-0a18531a065235685"
            ],
            "tags": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:route-table/rtb-08707a4c60b16ed07",
            "default_route_table_id": "rtb-08707a4c60b16ed07",
            "id": "rtb-08707a4c60b16ed07",
            "owner_id": "970433280917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:security-group/sg-03e85416e10c86934",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03e85416e10c86934",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "970433280917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-default",
              "environment": "development"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:internet-gateway/igw-08338973c31ced24d",
            "id": "igw-08338973c31ced24d",
            "owner_id": "970433280917",
            "tags": {
              "Name": "globo-dev",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev",
              "environment": "development"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08338973c31ced24d",
            "id": "r-rtb-004e92fc7f609ebd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004e92fc7f609ebd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.this",
            "module.main.aws_route_table.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:route-table/rtb-004e92fc7f609ebd4",
            "id": "rtb-004e92fc7f609ebd4",
            "owner_id": "970433280917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08338973c31ced24d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "globo-dev-public",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-public",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7f82b16d419bc6e",
            "route_table_id": "rtb-004e92fc7f609ebd4",
            "subnet_id": "subnet-0a18531a065235685"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9c304ea8335579d",
            "route_table_id": "rtb-004e92fc7f609ebd4",
            "subnet_id": "subnet-08ddb69fd0024f3e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:subnet/subnet-0a18531a065235685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a18531a065235685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970433280917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-dev-public-1",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-public-1",
              "environment": "development"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:subnet/subnet-08ddb69fd0024f3e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ddb69fd0024f3e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970433280917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-dev-public-2",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev-public-2",
              "environment": "development"
            },
            "vpc_id": "vpc-03877281e452c5d49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970433280917:vpc/vpc-03877281e452c5d49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0909418153958ca45",
            "default_route_table_id": "rtb-08707a4c60b16ed07",
            "default_security_group_id": "sg-03e85416e10c86934",
            "dhcp_options_id": "dopt-03d4e63bfd7a7332d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03877281e452c5d49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08707a4c60b16ed07",
            "owner_id": "970433280917",
            "tags": {
              "Name": "globo-dev",
              "environment": "development"
            },
            "tags_all": {
              "Name": "globo-dev",
              "environment": "development"
            }
          }
        }
      ]
    }
  ]
}